wnfs/src/public/node/snapshots/wnfs__public__node__node__snapshot_tests__public_file_and_directory_nodes-2.snap
---
source: wnfs/src/public/node/node.rs
expression: file
---
{
  "value": {
    "wnfs/pub/file": {
      "metadata": {
        "created": 0,
        "modified": 0
      },
      "previous": [],
      "userland": {
        "/": "baeaaaaa"
      },
      "version": "0.2.0"
    }
  },
  "cbor": "oW13bmZzL3B1Yi9maWxlpGd2ZXJzaW9uZTAuMi4waG1ldGFkYXRhomdjcmVhdGVkAGhtb2RpZmllZABocHJldmlvdXOAaHVzZXJsYW5k2CpFAAEAAAA="
}
